--- a/index.html
+++ b/index.html
@@ -56,9 +56,15 @@
             border-radius: 10px;
         }
 
+        .messageP1 {
+            font-size: 1.0em;
+            color: orange;
+            font-weight: bold;
+        }
+
         button {
             padding: 10px 20px;
-            font-size: 1em;
+            font-size: 1.2em;
             background-color: #f06;
             color: #fff;
             border: none;
@@ -79,8 +85,9 @@
 
         #countup {
             margin-top: 20px;
-            font-size: 1.2em;
-            color: #333;
+            font-size: 1.0em;
+            color: yellow;
+            font-weight: bold;
         }
     </style>
 </head>
@@ -91,7 +98,7 @@
         <img src="doraemon.webp" alt="Doraemon" class="doraemon" width="300px">
         <p class="heart">❤</p>
         <div class="message">
-            <p>任师傅祝你每天都开心，像 Doraemon 一样无忧无虑。</p>
+            <p class="messageP1">任师傅祝你每天都开心，像 Doraemon 一样无忧无虑。</p>
             <button onclick="showSurprise()">点击这里有惊喜哦</button>
             <p id="surprise">路小飞现在很想你！❤</p>
         </div>
